# Neural-Network

./: .gitignore  CMakeLists.txt  HOW_TO_RUN.txt  Makefile  README.md
include/: Activation.hpp  Matrix.hpp  NeuralNetwork.hpp
src/: Matrix.cpp  NeuralNetwork.cpp  main.cpp
